# hafiz

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.cluster.yml  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
api/authentication/: index.html
api/buckets/: index.html
api/errors/: index.html
api/objects/: index.html
architecture/: index.html
architecture/components/: index.html
architecture/security/: index.html
cli/: index.html
cli/commands/: index.html
config/: config.example.toml
configs/: hafiz.example.toml
crates/hafiz-admin/: Cargo.toml  README.md  Trunk.toml  index.html
crates/hafiz-admin/src/: app.rs  lib.rs
crates/hafiz-admin/src/api/: client.rs  mod.rs  types.rs
crates/hafiz-admin/src/components/: button.rs  header.rs  mod.rs  modal.rs  sidebar.rs  stats.rs  table.rs  upload.rs
crates/hafiz-admin/src/pages/: buckets.rs  cluster.rs  dashboard.rs  ldap.rs  mod.rs  not_found.rs  objects.rs  settings.rs  users.rs
crates/hafiz-admin/style/: main.css
crates/hafiz-auth/: Cargo.toml
crates/hafiz-auth/src/: lib.rs  presigned.rs
crates/hafiz-auth/src/ldap/: client.rs  mod.rs  types.rs
crates/hafiz-auth/src/signature/: mod.rs
crates/hafiz-cli/: Cargo.toml
crates/hafiz-cli/src/: config.rs  main.rs  progress.rs  s3_client.rs  utils.rs
crates/hafiz-cli/src/commands/: cat.rs  configure.rs  cp.rs  du.rs  head.rs  info.rs  ls.rs  mb.rs  mod.rs  mv.rs  presign.rs  rb.rs  rm.rs  sync.rs
crates/hafiz-cluster/: Cargo.toml
crates/hafiz-cluster/src/: cluster.rs  discovery.rs  error.rs  lib.rs  replicator.rs  transport.rs
crates/hafiz-core/: Cargo.toml
crates/hafiz-core/src/: config.rs  error.rs  lib.rs
crates/hafiz-core/src/types/: acl.rs  bucket.rs  common.rs  cors.rs  lifecycle.rs  mod.rs  notification.rs  object.rs  object_lock.rs  policy.rs  presigned.rs  replication.rs  storage.rs  user.rs
crates/hafiz-core/src/utils/: mod.rs
crates/hafiz-crypto/: Cargo.toml
crates/hafiz-crypto/src/: lib.rs
crates/hafiz-crypto/src/encryption/: mod.rs
crates/hafiz-crypto/src/hash/: mod.rs
crates/hafiz-metadata/: Cargo.toml
crates/hafiz-metadata/src/: lib.rs  traits.rs
crates/hafiz-metadata/src/postgres/: mod.rs
crates/hafiz-metadata/src/repository/: mod.rs
crates/hafiz-s3-api/: Cargo.toml
crates/hafiz-s3-api/src/: lib.rs  server.rs  tls.rs
crates/hafiz-s3-api/src/admin/: cluster.rs  ldap.rs  mod.rs  presigned.rs  server.rs  stats.rs  users.rs
crates/hafiz-s3-api/src/events/: dispatcher.rs  mod.rs
crates/hafiz-s3-api/src/metrics/: mod.rs
crates/hafiz-s3-api/src/middleware/: auth.rs  mod.rs
crates/hafiz-s3-api/src/routes/: cors.rs  mod.rs  notification.rs  object_lock.rs  policy.rs
crates/hafiz-s3-api/src/xml/: mod.rs
crates/hafiz-s3-api/static/: index.html
crates/hafiz-storage/: Cargo.toml
crates/hafiz-storage/src/: lib.rs
crates/hafiz-storage/src/engine/: mod.rs
deploy/: docker-compose.monitoring.yml  docker-compose.tls.yml
deploy/alertmanager/: alertmanager.yml
deploy/grafana/: novusstore-dashboard.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/haproxy/: haproxy.cfg
deploy/helm/hafiz/: .helmignore  Chart.yaml  README.md  values-development.yaml  values-production.yaml  values.yaml
deploy/helm/hafiz/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
deploy/helm/hafiz/templates/tests/: test-connection.yaml
deploy/kubernetes/: hafiz.yaml
deploy/postgres/: init.sql
deploy/prometheus/: hafiz_alerts.yml  prometheus.yml
deployment/: index.html
deployment/docker/: index.html
deployment/kubernetes/: index.html
deployment/production/: index.html
deployments/docker/: Dockerfile  docker-compose.yml
development/: index.html
development/changelog/: index.html
development/contributing/: index.html
development/roadmap/: index.html
docs/: API.md  ARCHITECTURE.md  CLI.md  CNAME  CONFIGURATION.md  DEPLOYMENT.md  SECURITY.md  index.md  requirements.txt
docs/cli/: index.md
docs/deployment/: docker.md  index.md  kubernetes.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md  requirements.md
docs/operations/: monitoring.md
docs/user-guide/: access-control.md  index.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/requirements/: index.html
operations/: index.html
operations/backup/: index.html
operations/monitoring/: index.html
operations/troubleshooting/: index.html
scripts/: docker-build.sh  docker-publish.sh  release.sh  setup-dev.sh  tls-certs.sh
search/: search_index.json
user-guide/: index.html
user-guide/access-control/: index.html
user-guide/buckets/: index.html
user-guide/encryption/: index.html
user-guide/object-lock/: index.html
user-guide/objects/: index.html
user-guide/versioning/: index.html
