[package]
name = "hafiz-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }

# HTTP client for API calls
gloo-net = "0.5"
gloo-timers = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "Storage",
    "console",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "MouseEvent",
    "Event",
    "EventTarget",
] }

# Logging
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Time formatting
chrono = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
