[package]
name = "hafiz-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hafiz-core = { workspace = true }
hafiz-crypto = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
percent-encoding = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
