[package]
name = "hafiz-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hafiz"
path = "src/main.rs"

[dependencies]
hafiz-core = { workspace = true }
hafiz-s3-api = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
