[package]
name = "hafiz-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
digest = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
thiserror = { workspace = true }
