[package]
name = "hafiz-s3-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cluster"]
cluster = ["hafiz-cluster"]

[dependencies]
hafiz-core = { workspace = true }
hafiz-crypto = { workspace = true }
hafiz-storage = { workspace = true }
hafiz-metadata = { workspace = true }
hafiz-auth = { workspace = true }
hafiz-cluster = { workspace = true, optional = true }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-service = "0.3"
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
quick-xml = { workspace = true }

tracing = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
mime_guess = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"
rcgen = { version = "0.14", features = ["x509-parser"] }
time = "0.3"
x509-parser = "0.18"

# Event notifications
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.10"
