[package]
name = "hafiz-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hafiz-core = { workspace = true }
hafiz-crypto = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
